cfn_benchmark/cfn_templates/aws-samples__apigateway-websockets-golang/template.yml
# MIT No Attribution

# Copyright 2020 Amazon.com, Inc. or its affiliates.

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: >

Parameters:
  ApplicationName:
    Type: String
    Default: API Gateway WebSockets Golang Example
    Description: The application name used when tagging resources

  VpcCIDR:
    Type: String
    Default: 10.1.0.0/16
    Description: The IP range (CIDR notation) for this VPC
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(\\d|[1-2]\\d|3[0-2]))$"

  PrivateSubnet1CIDR:
    Type: String
    Default: 10.1.1.0/24
    Description: The IP range (CIDR notation) for the private subnet in the first AZ
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(\\d|[1-2]\\d|3[0-2]))$"

  PrivateSubnet2CIDR:
    Type: String
    Default: 10.1.2.0/24
    Description: The IP range (CIDR notation) for the private subnet in the second AZ
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(\\d|[1-2]\\d|3[0-2]))$"

  PublicSubnet1CIDR:
    Type: String
    Default: 10.1.3.0/24
    Description: The IP range (CIDR notation) for the public subnet in the first AZ
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(\\d|[1-2]\\d|3[0-2]))$"

  PublicSubnet2CIDR:
    Type: String
    Default: 10.1.4.0/24
    Description: The IP range (CIDR notation) for the public subnet in the second AZ
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(\\d|[1-2]\\d|3[0-2]))$"

  CacheNodeType:
    Type: String
    Default: cache.t2.small
    Description: EC2 Instance Type to use for the Redis cache
    AllowedValues:
      - cache.t2.micro
      - cache.t2.small
      - cache.t2.medium
      - cache.t3.micro
      - cache.t3.small
      - cache.t3.medium

Globals:
  Function:
    CodeUri: .
    Timeout: 5
    Tracing: Active
    MemorySize: 512
    Runtime: provided.al2
    Handler: my.bootstrap.file
    VpcConfig:
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      SecurityGroupIds:
        - !Ref NoIngressSecurityGroup

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref ApplicationName

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref "AWS::Region"
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} Private Subnet (AZ1)

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref "AWS::Region"
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} Private Subnet (AZ2)

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref "AWS::Region"
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} Public Subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref "AWS::Region"
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} Public Subnet (AZ2)

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} Internet Gateway

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} (1)

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} (2)

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} (1)

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref PublicSubnet2
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} (2)

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      GatewayId: !Ref InternetGateway
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} Private Routes (AZ1)

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      NatGatewayId: !Ref NatGateway1
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref PrivateRouteTable1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} Private Routes (AZ2)

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      NatGatewayId: !Ref NatGateway2
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref PrivateRouteTable2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

  PrivateHostedZone:
    Type: "AWS::Route53::HostedZone"
    Properties:
      Name: "service.internal"
      HostedZoneConfig:
        Comment: Private Hosted Zone
      VPCs:
        - VPCId: !Ref VPC
          VPCRegion: !Ref "AWS::Region"

  CacheEndpointRecordSetGroup:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      HostedZoneId: !Ref PrivateHostedZone
      Comment: Record Set for the primary Redis endpoint
      RecordSets:
        - TTL: "900"
          Type: CNAME
          Name: "redis.service.internal"
          ResourceRecords:
            - !GetAtt RedisReplicationGroup.PrimaryEndPoint.Address
        - TTL: "900"
          Type: SRV
          Name: "_redis._tcp.service.internal"
          ResourceRecords:
            - !Sub "1 0 ${RedisReplicationGroup.PrimaryEndPoint.Port} redis.service.internal"

  NoIngressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: !Sub ${ApplicationName} Security Group (No Ingress)
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} Security Group (No Ingress)

  RedisSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: !Sub ${ApplicationName} Security Group (Redis)
      SecurityGroupIngress:
        - ToPort: 6379
          FromPort: 6379
          IpProtocol: tcp
          SourceSecurityGroupId: !Ref NoIngressSecurityGroup
          Description: Redis cluster connections from security group
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} Security Group (Redis)

  RedisSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      Description: Redis cluster subnet group
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  RedisReplicationGroup:
    Type: AWS::ElastiCache::ReplicationGroup
    Properties:
      Port: 6379
      Engine: redis
      NumCacheClusters: 2
      EngineVersion: 5.0.0
      CacheNodeType: !Ref CacheNodeType
      AutomaticFailoverEnabled: true
      AtRestEncryptionEnabled: false
      TransitEncryptionEnabled: false
      CacheSubnetGroupName: !Ref RedisSubnetGroup
      PreferredMaintenanceWindow: sun:23:00-mon:01:30
      ReplicationGroupDescription: ElastiCache For Redis Replication Group
      SecurityGroupIds:
        - !Ref RedisSecurityGroup
      PreferredCacheClusterAZs:
        - !Select
          - 0
          - Fn::GetAZs: !Ref "AWS::Region"
        - !Select
          - 1
          - Fn::GetAZs: !Ref "AWS::Region"
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName} ElastiCache for Redis

  ConnectFunction:
    Type: AWS::Serverless::Function
    Metadata:
      BuildMethod: makefile
    Properties:
      Policies:
        - VPCAccessPolicy: {}

  DisconnectFunction:
    Metadata:
      BuildMethod: makefile
    Type: AWS::Serverless::Function
    Properties:
      Policies:
        - VPCAccessPolicy: {}

  PublishFunction:
    Metadata:
      BuildMethod: makefile
    Type: AWS::Serverless::Function
    Properties:
      Timeout: 15
      MemorySize: 2048
      Policies:
        - VPCAccessPolicy: {}
        - Statement:
            - Effect: Allow
              Action:
                - "execute-api:ManageConnections"
              Resource:
                - !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${WebSocket}/*"

  WebSocket:
    Type: AWS::ApiGatewayV2::Api
    Properties:
      Name: !Ref ApplicationName
      ProtocolType: WEBSOCKET
      RouteSelectionExpression: "$request.body.message"

  Deployment:
    Type: AWS::ApiGatewayV2::Deployment
    DependsOn:
      - PublishRoute
      - ConnectRoute
      - DisconnectRoute
    Properties:
      ApiId: !Ref WebSocket

  Stage:
    Type: AWS::ApiGatewayV2::Stage
    Properties:
      StageName: v1
      ApiId: !Ref WebSocket
      Description: TO DO
      DeploymentId: !Ref Deployment
      DefaultRouteSettings:
        LoggingLevel: INFO
        DataTraceEnabled: true
        DetailedMetricsEnabled: true

  ConnectFunctionPermission:
    Type: AWS::Lambda::Permission
    DependsOn:
      - WebSocket
    Properties:
      Action: lambda:InvokeFunction
      Principal: apigateway.amazonaws.com
      FunctionName: !Ref ConnectFunction

  DisconnectFunctionPermission:
    Type: AWS::Lambda::Permission
    DependsOn:
      - WebSocket
    Properties:
      Action: lambda:InvokeFunction
      Principal: apigateway.amazonaws.com
      FunctionName: !Ref DisconnectFunction

  PublishFunctionPermission:
    Type: AWS::Lambda::Permission
    DependsOn:
      - WebSocket
    Properties:
      Action: lambda:InvokeFunction
      Principal: apigateway.amazonaws.com
      FunctionName: !Ref PublishFunction

  ConnectFunctionLogGroup:
    Type: AWS::Logs::LogGroup
    DependsOn:
      - ConnectFunction
    Properties:
      RetentionInDays: 30
      LogGroupName: !Sub /aws/lambda/${ConnectFunction}

  DisconnectFunctionLogGroup:
    Type: AWS::Logs::LogGroup
    DependsOn:
      - DisconnectFunction
    Properties:
      RetentionInDays: 30
      LogGroupName: !Sub /aws/lambda/${DisconnectFunction}

  PublishFunctionLogGroup:
    Type: AWS::Logs::LogGroup
    DependsOn:
      - PublishFunction
    Properties:
      RetentionInDays: 30
      LogGroupName: !Sub /aws/lambda/${PublishFunction}

  ConnectRoute:
    Type: AWS::ApiGatewayV2::Route
    Properties:
      RouteKey: $connect
      ApiId: !Ref WebSocket
      AuthorizationType: NONE
      OperationName: ConnectRoute
      Target: !Join
        - "/"
        - - "integrations"
          - !Ref ConnectIntegration

  DisconnectRoute:
    Type: AWS::ApiGatewayV2::Route
    Properties:
      RouteKey: $disconnect
      ApiId: !Ref WebSocket
      AuthorizationType: NONE
      OperationName: DisconnectRoute
      Target: !Join
        - "/"
        - - "integrations"
          - !Ref DisconnectIntegration

  PublishRoute:
    Type: AWS::ApiGatewayV2::Route
    Properties:
      RouteKey: $default
      ApiId: !Ref WebSocket
      AuthorizationType: NONE
      OperationName: PublishRoute
      Target: !Join
        - "/"
        - - "integrations"
          - !Ref PublishIntegration

  ConnectIntegration:
    Type: AWS::ApiGatewayV2::Integration
    Properties:
      ApiId: !Ref WebSocket
      Description: TO DO
      IntegrationType: AWS_PROXY
      IntegrationUri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ConnectFunction.Arn}/invocations

  DisconnectIntegration:
    Type: AWS::ApiGatewayV2::Integration
    Properties:
      ApiId: !Ref WebSocket
      Description: TO DO
      IntegrationType: AWS_PROXY
      IntegrationUri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${DisconnectFunction.Arn}/invocations

  PublishIntegration:
    Type: AWS::ApiGatewayV2::Integration
    Properties:
      ApiId: !Ref WebSocket
      Description: TO DO
      IntegrationType: AWS_PROXY
      IntegrationUri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${PublishFunction.Arn}/invocations

  CacheNodeCpuUtilizationAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      Period: 900
      Threshold: 90
      Unit: Percent
      Statistic: Average
      EvaluationPeriods: 2
      MetricName: CPUUtilization
      Namespace: AWS/ElastiCache
      ComparisonOperator: GreaterThanThreshold
      AlarmName: Redis Cache Cluster CPU Utilization
      AlarmDescription: Alarm if average percentage of Nodes CPU utilization goes over 90%
      Dimensions:
        - Name: CacheClusterId
          Value: !Ref RedisReplicationGroup

  CacheEvictionsAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      Period: 60
      Threshold: 0
      Statistic: Sum
      EvaluationPeriods: 3
      MetricName: Evictions
      Namespace: AWS/ElastiCache
      TreatMissingData: notBreaching
      ComparisonOperator: GreaterThanThreshold
      AlarmName: Redis Cache Cluster Evictions
      AlarmDescription: Alarm if cache is evicting non-expired items
      Dimensions:
        - Name: CacheClusterId
          Value: !Ref RedisReplicationGroup

  CacheSwapUsageAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      Period: 300
      Statistic: Maximum
      Threshold: 50000000
      DatapointsToAlarm: 5
      EvaluationPeriods: 5
      MetricName: SwapUsage
      Namespace: AWS/ElastiCache
      ComparisonOperator: GreaterThanThreshold
      AlarmName: Redis Cache Cluster Swap Usage
      AlarmDescription: Alarm if cache swap usage exceeds 50MB
      Dimensions:
        - Name: CacheClusterId
          Value: !Ref RedisReplicationGroup

Outputs:
  VPC:
    Value: !Ref VPC
    Description: The created VPC

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubnet2]]

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]

  PublicSubnet1:
    Value: !Ref PublicSubnet1
    Description: A reference to the public subnet in the 1st Availability Zone

  PublicSubnet2:
    Value: !Ref PublicSubnet2
    Description: A reference to the public subnet in the 2nd Availability Zone

  PrivateSubnet1:
    Value: !Ref PrivateSubnet1
    Description: A reference to the private subnet in the 1st Availability Zone

  PrivateSubnet2:
    Value: !Ref PrivateSubnet2
    Description: A reference to the private subnet in the 2nd Availability Zone

  NoIngressSecurityGroup:
    Value: !Ref NoIngressSecurityGroup
    Description: Security group with no ingress rule

  RedisSecurityGroup:
    Value: !Ref RedisSecurityGroup
    Description: Security group for ElastiCache Redis

  RedisPrimaryEndpointAddress:
    Value: !GetAtt RedisReplicationGroup.PrimaryEndPoint.Address
    Description: Primary Endpoint Address for the ElastiCache Redis Cluster

  RedisPrimaryEndpointPort:
    Value: !GetAtt RedisReplicationGroup.PrimaryEndPoint.Port
    Description: Primary Endpoint Port for the ElastiCache Redis Cluster

  WebSocketEndpoint:
    Description: URL for making WebSocket connections to the application's API
    Value: !Sub "wss://${WebSocket}.execute-api.${AWS::Region}.amazonaws.com/${Stage}/"
